# xor-neural

./: .gitignore  CMakeLists.txt  main.cpp
benchmark/: CMakeLists.txt  sigmoid.c
include/: activation.hpp  cost.hpp  layer.hpp  log.hpp  matrix.hpp  network.cpp  network.hpp  sigmoid.hpp
int/: CMakeLists.txt  dotprod_optimization.cpp  sigmoid_benchmark.cpp
lib/armadillo/: CMakeLists.txt
lib/armadillo-14.0.2/: ArmadilloConfig.cmake  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt  libarmadillo.14.0.2.dylib  libarmadillo.14.dylib
lib/armadillo-14.0.2/tests1/: CTestTestfile.cmake  Makefile  cmake_install.cmake  smoke_test
lib/armadillo-14.0.2/tmp/include/armadillo_bits/: config.hpp
lib/armadillo-14.0.2/tmp/misc/: armadillo.pc
src/: layer.cpp  main.cpp  network.cpp
